--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   <footer>
     <address>
       <div>
-        <p>&copy; 2025 Sadaf Candle Store. All rights reserved.</p>
-        <p>Designed by Saja</p>
+ <p>&copy; 2025  JPU study guide. All rights reserved.</p>
+        <p>Designed by Saja Asayara </p>
         <nav>
           <a href="#"></a>
           <a href="#"></a>
